[gd_scene load_steps=2 format=3 uid="uid://chirmpegn83dg"]

[ext_resource type="Script" uid="uid://dju32gilbhsmm" path="res://UI/building_menu.gd" id="1_building_menu"]

[node name="BuildingMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 293.0
offset_bottom = 50.0
script = ExtResource("1_building_menu")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 102.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.34
anchor_bottom = 0.75000006
offset_right = 260.7
offset_bottom = 12.499996
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5)

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2

[node name="TowerButton" type="Button" parent="Panel/HBoxContainer"]
layout_mode = 2
text = "Tower (30)"

[node name="BarricadeButton" type="Button" parent="Panel/HBoxContainer"]
layout_mode = 2
text = "Barricade (15)"

[node name="MineButton" type="Button" parent="Panel/HBoxContainer"]
layout_mode = 2
text = "Mine (15)"

[node name="DroneButton" type="Button" parent="Panel/HBoxContainer"]
layout_mode = 2
text = "Drone (10)"
